# pawnalyze

./: .gitignore  Dockerfile  ECO.json  README.md  ecoingest.py  ecoingest_test.py  pawnalyzer.py  pawnalyzer_test.py  pawnenginemoves.py  pawnenginemoves_test.py  pawningest.py  pawningest_test.py  pawnlib.py  pawnlib_test.py  pawnmaintain.py  pawnmaintain_test.py  pawnzobrist.py  pawnzobrist_test.py  pyproject.toml  requirements.txt  run_all_tests.py  run_coverage.sh  setup.py
test-pgn/: test-file-1.pgn
