[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pawnalyze"
version = "1.0"
description = "Parse and analyze historical chess games: frequencies, trends, player styles, etc"
requires-python = ">=3.8"

[project.dependencies]
chess = ">=1.11.2"
py7zr = ">=0.22.0"
tqdm = ">=4.66.1"
baselib = {git = "https://github.com/balparda/baselib.git", rev = "v1.0"}
